beta 4
======

- Added some flexibility into ActiveRecord Queries. They are now mutable,
  which means we now have methods like 'SetParameter', 'SetParameterList' and
  'SetRange'; and the 'Query' property is now read-write.

- Added support for query modifiers in ActiveRecord Queries. Any object implementing
  IQueryModifier can be added to an ActiveRecordBaseQuery, using the 
  (protected) 'AddModifier' method. Parameters and query ranges 
  are implemented as query modifiers.

- Fixed AR-39: Added virtual to IsValid on ActiveRecordValidationBase/<T>

- Fixed AR-45: Added BindingFlags.NonPublic to DefaultBindingFlags on ActiveRecordModelBuilder

- Added Element to RelationAttribute, now can map relations of simple types
   Usage:
	 [HasMany(typeof(string), "ItemId", "Elements", Element = "Name")]

- Applied Antonio`s patches 
  See http://forum.castleproject.org/posts/list/457.page and 
      http://forum.castleproject.org/posts/list/566.page

- Added Debug to IConfiguration Source. If set then XmlGenerationVisitor will save nhibernate mapping files to the AppDomain.BaseDirectory. 

- Added support to CompositeKeys as Foreign Keys (kudos to G. Richard Bellamy)

  BelongsToAttribute - Added CompositeKeyColumns property.
  HasAndBelongsToManyAttribute - Added CompositeKeyColumnKeys and CompositeKeyColumnRefs.
  HasManyAttribute - Added CompositeKeyColumnKeys.
  VersionAttribute - Added support for UnsavedValue.
  SemanticVerifierVisitor - Added checks to ensure the composite key attributes are used properly.
  XmlGenerationVisitor - Added output to support mapping the composite key attributes, as well as the unsaved-value attribute for Version.
 
  In general, the changes are motivated by the need to have AR map to 
  legacy data, where composite keys are used as both primary and foreign 
  keys. The current AR support for CompositeKeys does not support 
  associations, this patch does.
 
  There are some caveats when using this, which are driven by the NH 